# langchain-streamlit-google-patent-search

./: .gitignore  README.md  pyproject.toml  test.py
demo_app/: main.py  patent_downloader.py
demo_app/components/: sidebar.py
