[tool.poetry]
name = "langchain-streamlit-docker-template"
version = "0.1.0"
description = "A template langchain Streamlit App with Docker"
authors = ["Amjad Raza"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_streamlit_docker_template"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.184"
openai = "^0.27.7"
streamlit = "^1.24.0"
bs4 = "^0.0.1"
selenium = "^4.14.0"
sentence-transformers = "^2.2.2"
pypdf = "^3.16.4"
chromadb = "0.3.29"
unstructured = {extras = ["all-docs"], version = "^0.10.26"}
pdf2image = "^1.16.3"
pdfminer-six = "^20221105"
unstructured-inference = "^0.7.10"
unstructured-pytesseract = "^0.3.12"
poppler-utils = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
